--- a/2025.10.18_Maker_0.0.ioc
+++ b/2025.10.18_Maker_0.0.ioc
@@ -220,8 +220,9 @@ TIM2.Period=1-1
 TIM2.Prescaler=64-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Period
-TIM3.Period=6400-1
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Period,Prescaler
+TIM3.Period=1000-1
+TIM3.Prescaler=64-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
