--- a/2025.10.18_Maker_0.0.ioc
+++ b/2025.10.18_Maker_0.0.ioc
@@ -4,45 +4,58 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA15
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PA15
+Mcu.Pin25=PB3
+Mcu.Pin26=PB4
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB12
-Mcu.PinsNb=25
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -52,6 +65,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -61,7 +75,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -83,22 +96,46 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=CSBC_Trig
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA6.Signal=S_TIM3_CH1
-PA7.Signal=S_TIM3_CH2
-PA8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PA8.GPIO_Label=CSB_ECHO
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA2.GPIO_Label=NRF_IRQ
+PA2.GPIO_PuPd=GPIO_PULLUP
+PA2.Locked=true
+PA2.Signal=GPIO_Input
+PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA3.GPIO_Label=NRF_CE
+PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=NRF_CS
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA8.GPIO_Label=CSB_ECHO_1
 PA8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA8.GPIO_PuPd=GPIO_PULLDOWN
 PA8.Locked=true
 PA8.Signal=GPXTI8
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB0.GPIO_Label=E1A
 PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPXTI0
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=E2A
+PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB12.GPIOParameters=GPIO_Label
@@ -117,8 +154,17 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=AIN2
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=LED
+PB3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB3.GPIO_Label=CSB_ECHO_2
+PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB3.Locked=true
+PB3.Signal=GPXTI3
+PB4.Signal=S_TIM3_CH1
+PB5.Signal=S_TIM3_CH2
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -162,43 +208,53 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
-RCC.ADCFreqValue=32000000
-RCC.AHBFreq_Value=64000000
+RCC.ADCFreqValue=36000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=64000000
-RCC.PLLCLKFreq_Value=64000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLMUL=RCC_PLL_MUL16
-RCC.SYSCLKFreq_VALUE=64000000
+RCC.HCLKFreq_Value=72000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=64000000
-RCC.USBFreq_Value=64000000
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=9.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM2.IPParameters=Period,Prescaler
-TIM2.Period=1-1
-TIM2.Prescaler=64-1
+TIM2.Period=65535
+TIM2.Prescaler=7200-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Period,Prescaler
 TIM3.Period=1000-1
-TIM3.Prescaler=64-1
+TIM3.Prescaler=72-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
